medium_pipeline/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: airflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-apiserver
                port:
                  number: 8080
          - path: /flower
            pathType: Prefix
            backend:
              service:
                name: airflow-flower
                port:
                  number: 5555
